# meeting-minutes-agent

./: README.md  README_DEMO.md  agent.py  config.py  env_template.txt  main.py  pyproject.toml  start_demo.py  start_server.py  test_api.py  test_transcription.py  tool.py  transcription.py
meeing_minutes_agent/: env_frontend.txt  package-lock.json  package.json
meeing_minutes_agent/app/: globals.css  layout.tsx  page.tsx
meeing_minutes_agent/lib/: api.ts
